[package]
name = "nyheter"
version = "0.1.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = {version= "*", features = ['from_url']}
serde_json = "*"
regex = "*"
lazy_static = "*"